-
Bug
-
Resolution: Fixed
-
P4
-
11, 13, 14
-
b13
-
x86_64
-
generic
compiler/loopopts/superword/Vec_MulAddS2I.java crashed:
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/c1_GraphBuilder.cpp:1965
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (open/src/hotspot/share/c1/c1_GraphBuilder.cpp:1965), pid=11638, tid=11663
# Error: assert(singleton != __null && singleton != declared_interface) failed
#
# JRE version: Java(TM) SE Runtime Environment (14.0+4) (fastdebug build 14-ea+4-97)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+4-97, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x720839] GraphBuilder::invoke(Bytecodes::Code)+0x14c9
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_compiler/scratch/2/hs_err_pid11638.log
#
# Compiler replay data is saved as:
# testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_compiler/scratch/2/replay_pid11638.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Current thread is 11663
Dumping core ...
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/c1_GraphBuilder.cpp:1965
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (open/src/hotspot/share/c1/c1_GraphBuilder.cpp:1965), pid=11638, tid=11663
# Error: assert(singleton != __null && singleton != declared_interface) failed
#
# JRE version: Java(TM) SE Runtime Environment (14.0+4) (fastdebug build 14-ea+4-97)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+4-97, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x720839] GraphBuilder::invoke(Bytecodes::Code)+0x14c9
#
# No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_compiler/scratch/2/hs_err_pid11638.log
#
# Compiler replay data is saved as:
# testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_compiler/scratch/2/replay_pid11638.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Current thread is 11663
Dumping core ...
- relates to
-
JDK-8223504 improve performance of forall loops by better inlining of "iterator()" methods.
-
- Resolved
-