8227236: assert(singleton != __null && singleton != declared_interface) failed

Reviewed-by: dlong